--- a/src/pages/order-for-goods/order-list/order-list.component.html
+++ b/src/pages/order-for-goods/order-list/order-list.component.html
@@ -7,7 +7,7 @@
  * @LastEditTime: 2021-11-09 13:36:44
 -->
 <div class="scrollBar" [style.height]="listHeight + 'px'" #scrollBar>
-  <div class="scrollArea" [style.top]="scrollY + 'px'">
+  <div class="scrollArea">
     <app-order-item *ngFor="let item of listData; let i = index" [itemData]="item" [textureData]="textureData" [index]="i"></app-order-item>
   </div>
 </div>
