--- a/src/pages/my/address/address-list/address-list.component.html
+++ b/src/pages/my/address/address-list/address-list.component.html
@@ -7,7 +7,7 @@
  * @LastEditTime: 2021-11-02 17:26:25
 -->
 <div class="scrollBar" [style.height]="listHeight + 'px'" #scrollBar>
-  <div class="scrollArea" [style.top]="scrollY + 'px'">
+  <div class="scrollArea">
     <app-address-item *ngFor="let item of listData; let i = index" [itemData]="item" [textureData]="textureData" [index]="i"></app-address-item>
   </div>
 </div>
