--- a/src/pages/my/video-record/record-list/record-list.component.html
+++ b/src/pages/my/video-record/record-list/record-list.component.html
@@ -7,7 +7,7 @@
  * @LastEditTime: 2021-10-28 09:45:24
 -->
 <div class="scrollBar" [style.height]="listHeight + 'px'" #scrollBar>
-  <div class="scrollArea" [style.top]="scrollY + 'px'">
+  <div class="scrollArea">
     <app-record-item *ngFor="let item of listData; let i = index" [itemData]="item" [textureData]="textureData" [index]="i"></app-record-item>
   </div>
 </div>
