--- a/src/pages/prize/prize-list/prize-list.component.html
+++ b/src/pages/prize/prize-list/prize-list.component.html
@@ -7,7 +7,7 @@
  * @LastEditTime: 2021-11-11 13:06:14
 -->
 <div class="scrollBar" [style.height]="listHeight + 'px'" #scrollBar>
-  <div class="scrollArea" [style.top]="scrollY + 'px'">
+  <div class="scrollArea">
     <app-prize-item *ngFor="let item of listData; let i = index" [itemData]="item" [textureData]="textureData" [index]="i" (itemDelete)="onItemDelete($event)"></app-prize-item>
   </div>
 </div>
