--- a/src/pages/shop/bank-scroll-list/bank-scroll-list.component.html
+++ b/src/pages/shop/bank-scroll-list/bank-scroll-list.component.html
@@ -7,7 +7,7 @@
  * @LastEditTime: 2021-09-07 10:00:49
 -->
 <div class="scrollBar" [style.height]="listHeight + 'px'" #scrollBar>
-  <div class="scrollArea" [style.top]="scrollY + 'px'">
+  <div class="scrollArea">
     <app-bank-item *ngFor="let item of listData; let i = index" [itemData]="item" [textureData]="textureData" [index]="i" (itemClick)="onItemClick($event)"></app-bank-item>
   </div>
 </div>
