--- a/src/pages/shop/vip-level-list/vip-level-list.component.html
+++ b/src/pages/shop/vip-level-list/vip-level-list.component.html
@@ -4,10 +4,10 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-23 15:22:50
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-10-21 15:04:44
+ * @LastEditTime: 2022-01-05 15:41:39
 -->
 <div class="scrollBar" [style.height]="listHeight + 'px'" #scrollBar>
-  <div class="scrollArea" [style.top]="scrollY + 'px'">
+  <div class="scrollArea">
     <app-image [imgData]="lightImg"></app-image>
     <app-scroll-list-button [imgData]="vip1" (itemClick)="onItemClick(0)"></app-scroll-list-button>
     <app-scroll-list-button [imgData]="vip2" (itemClick)="onItemClick(1)"></app-scroll-list-button>
