--- a/src/pages/prize/prize-item/prize-item.component.html
+++ b/src/pages/prize/prize-item/prize-item.component.html
@@ -4,11 +4,11 @@
  * @Author: Wayne Yu
  * @Date: 2021-11-10 10:39:07
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2022-01-05 13:42:32
+ * @LastEditTime: 2022-01-05 16:47:40
 -->
 <div [style.top]="index * 208 + 'px'" #itemInList>
   <app-image [imgData]="itemBg"></app-image>
-  <div class="overFlowHidden" [ngStyle]="styles.productImgage">
+  <div [ngStyle]="styles.productImgage">
     <img [attr.src]="itemData.img" width="170" height="170"/>
   </div>
   <app-image [imgData]="imageFrame"></app-image>
