--- a/src/service/ui/head-bar/head-bar.component.html
+++ b/src/service/ui/head-bar/head-bar.component.html
@@ -4,11 +4,11 @@
  * @Author: Wayne Yu
  * @Date: 2021-05-26 13:36:53
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-12-31 10:33:09
+ * @LastEditTime: 2022-01-05 16:49:18
 -->
 <div>
   <app-image [imgData]="topBarBg"></app-image>
-  <div class="overFlowHidden" [ngStyle]="styles.facebookHead">
+  <div [ngStyle]="styles.facebookHead">
     <img src="assets/default_head.png" width="80" height="80">
     <img src="{{headIcon}}" width="80" height="80">
   </div>
