--- a/src/pages/my/edit-address/address-edit-input/address-edit-input.component.html
+++ b/src/pages/my/edit-address/address-edit-input/address-edit-input.component.html
@@ -4,9 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-11-08 10:53:35
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-11-08 11:32:34
+ * @LastEditTime: 2022-01-06 10:40:03
 -->
 <div [attr.style]="imgStyle">
-  <div class="redText" *ngIf="requred&&text==''"></div>
+  <div class="redText" [ngStyle]="redText" *ngIf="requred&&text==''"></div>
   <input type="text" class="inputText" id="textInput" [attr.style]="textInputStyle" [placeholder]="defautText" (change)="onTextChange()" (input)="onTextChange()" autocomplete="off" #textInput>
 </div>
