--- a/src/pages/my/edit-address/address-edit-text-area/address-edit-text-area.component.html
+++ b/src/pages/my/edit-address/address-edit-text-area/address-edit-text-area.component.html
@@ -4,9 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-11-05 11:55:15
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-11-08 11:45:09
+ * @LastEditTime: 2022-01-06 11:00:49
 -->
 <div [attr.style]="imgStyle">
-  <div class="redText" *ngIf="text==''"></div>
+  <div class="redText" [ngStyle]="redText" *ngIf="text==''"></div>
   <textArea class="inputText" id="textInput" [attr.style]="textInputStyle" [placeholder]="defautText" (change)="onTextChange()" (input)="onTextChange()" autocomplete="off" #textInput></textArea>
 </div>
