--- a/src/pages/video/video/video.component.html
+++ b/src/pages/video/video/video.component.html
@@ -10,7 +10,7 @@
     <iframe src="assets/video/video.html" height="{{iframeHeight}}" id="videoFrame" class="videoFrame widthApp" scrolling="no"></iframe>
 </div>
 <app-image-scale-button [imgData]="backToLobbyBtn" (itemClick)="backToLobby()"></app-image-scale-button>
-<div class="playerHead" [ngStyle]="styles.playerHead">
+<div [ngStyle]="styles.playerHead">
     <img [src]="userHeadIcon" [ngStyle]="styles.playingUser"/>
     <app-text-field [positionRect]="viewRect" [text]="usersCountText" [color]="textColor" [size]="textSize"></app-text-field>
 </div>
