--- a/src/popups/daily-bonus/daily-item/daily-item.component.html
+++ b/src/popups/daily-bonus/daily-item/daily-item.component.html
@@ -12,7 +12,7 @@
   <app-popup-text-field [textData]="titleText" [text]="'Day ' + iNumber"></app-popup-text-field>
   <app-popup-text-field [textData]="coinText" [text]="'x ' + itemData"></app-popup-text-field>
   <img src="assets/daily_bonus/hand.gif" [ngStyle]="styles.handImg" *ngIf="showHand">
-  <div class="passedMask" *ngIf="showMask" [ngStyle]="styles.passedMask"></div>
+  <div *ngIf="showMask" [ngStyle]="styles.passedMask"></div>
   <app-image [imgData]="greenCheck" *ngIf="showMask"></app-image>
   <img src="assets/daily_bonus/bones gif.gif" *ngIf="gettingDailyBonus">
   <app-image-button [imgData]="clickArea" *ngIf="canGetBonus" (itemClick)="getDailyBonus()"></app-image-button>
