--- a/src/pages/before-lobby/start-up/start-up.component.html
+++ b/src/pages/before-lobby/start-up/start-up.component.html
@@ -4,10 +4,10 @@
  * @Author: Wayne Yu
  * @Date: 2021-10-14 13:31:19
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2022-01-05 16:50:23
+ * @LastEditTime: 2022-01-06 13:56:30
 -->
 <div class="widthApp" [style.height]="pageHeight + 'px'" [ngStyle]="styles.stretchingBg">
-    <div #startPageEntity class="startPageEntity">
+    <div #startPageEntity [ngStyle]="styles.startPageEntity">
         <div *ngFor="let item of tipPagesForShow; let i = index" [style.left]="750 * (i-1) + 'px'">
             <app-image [imgData]="item"></app-image>
             <app-image-button [imgData]="getBtnUI(i)"></app-image-button>
