--- a/src/pages/shop/bank-item/bank-item.component.html
+++ b/src/pages/shop/bank-item/bank-item.component.html
@@ -4,9 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-06 09:52:07
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-09-06 17:00:42
+ * @LastEditTime: 2022-01-06 15:01:52
 -->
-<div class="bankItem" [style.top]="index * 185 + 'px'" #itemInList>
+<div [ngStyle]="styles.bankItem" #itemInList>
   <app-image [imgData]="bankItemBg"></app-image>
   <app-image [imgData]="coinIcon"></app-image>
   <app-image [imgData]="recommendedIcon"></app-image>
