--- a/src/pages/shop/ticket-item/ticket-item.component.html
+++ b/src/pages/shop/ticket-item/ticket-item.component.html
@@ -4,9 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-09 10:41:10
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2022-01-05 13:28:55
+ * @LastEditTime: 2022-01-06 15:00:58
 -->
-<div class="ticketItem" [style.top]="offsetY+'px'" [style.left]="offsetX+'px'" #itemInList>
+<div [ngStyle]="styles.ticketItem" #itemInList>
   <img src={{itemData.img}} (load)="onImgload()" [ngStyle]="styles.ticketItemImage"/>
   <app-image [imgData]="ticketItemBg"></app-image>
   <app-image-button [imgData]="infoIcon"></app-image-button>
