--- a/src/pages/my/contact-us/contact-scroll/contact-scroll.component.html
+++ b/src/pages/my/contact-us/contact-scroll/contact-scroll.component.html
@@ -4,9 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-11-04 16:02:21
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2022-01-05 16:02:54
+ * @LastEditTime: 2022-01-06 15:56:56
 -->
-<div class="scrollBar" [style.height]="listHeight + 'px'" #scrollBar>
+<div [style.height]="listHeight + 'px'" #scrollBar>
   <app-image [imgData]="title"></app-image>
   <app-scroll-list-button [imgData]="backBtn" (itemClick)="gotoBack()"></app-scroll-list-button>
   <form>
