--- a/src/pages/video/video/video.component.html
+++ b/src/pages/video/video/video.component.html
@@ -4,10 +4,10 @@
  * @Author: Wayne Yu
  * @Date: 2021-05-26 16:46:50
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-12-31 16:47:48
+ * @LastEditTime: 2022-01-06 16:35:33
 -->
 <div [ngStyle]="styles.videoFrameContainer">
-    <iframe src="assets/video/video.html" height="{{iframeHeight}}" id="videoFrame" class="videoFrame widthApp" scrolling="no"></iframe>
+    <iframe src="assets/video/video.html" height="{{iframeHeight}}" id="videoFrame" class="widthApp" scrolling="no"></iframe>
 </div>
 <app-image-scale-button [imgData]="backToLobbyBtn" (itemClick)="backToLobby()"></app-image-scale-button>
 <div [ngStyle]="styles.playerHead">
