--- a/src/pages/lobby/product-item/product-item.component.html
+++ b/src/pages/lobby/product-item/product-item.component.html
@@ -4,9 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-06-04 11:40:44
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-12-31 11:14:39
+ * @LastEditTime: 2022-01-07 11:28:06
 -->
-<div [ngStyle]="styles.position" [attr.itemdata]="index" #itemInList>
+<div [ngStyle]="styles.position" [attr.itemdata]="index" (click)="onItemClick(event)">
   <app-image [imgData]="productBg"></app-image>
   <div [ngStyle]="styles.productPicPosition">
     <img src={{itemData.img}} width="320px" height="308px" [ngStyle]="styles.productImageStyle" (load)="onImgload()">
