--- a/src/pages/my/user-center/user-center-item/user-center-item.component.html
+++ b/src/pages/my/user-center/user-center-item/user-center-item.component.html
@@ -4,9 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-14 11:43:09
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2022-01-05 13:21:19
+ * @LastEditTime: 2022-01-07 11:25:24
 -->
-<div [style.top]="index * 146 + 10 + 'px'" #itemInList>
+<div [style.top]="index * 146 + 10 + 'px'">
   <app-image [imgData]="itemBg"></app-image>
   <app-image [imgData]="arrow"></app-image>
   <app-image [imgData]="mainIcon"></app-image>
