--- a/src/pages/prize/prize-item/prize-item.component.html
+++ b/src/pages/prize/prize-item/prize-item.component.html
@@ -6,7 +6,7 @@
  * @LastEditors: Wayne Yu
  * @LastEditTime: 2022-01-05 16:47:40
 -->
-<div [style.top]="index * 208 + 'px'" #itemInList>
+<div [style.top]="index * 208 + 'px'" (click)="onItemClick(event)">
   <app-image [imgData]="itemBg"></app-image>
   <div [ngStyle]="styles.productImgage">
     <img [attr.src]="itemData.img" width="170" height="170"/>
