--- a/src/pages/shop/bank-item/bank-item.component.html
+++ b/src/pages/shop/bank-item/bank-item.component.html
@@ -6,7 +6,7 @@
  * @LastEditors: Wayne Yu
  * @LastEditTime: 2022-01-06 15:01:52
 -->
-<div [ngStyle]="styles.bankItem" #itemInList>
+<div [ngStyle]="styles.bankItem" (click)="onItemClick(event)">
   <app-image [imgData]="bankItemBg"></app-image>
   <app-image [imgData]="coinIcon"></app-image>
   <app-image [imgData]="recommendedIcon"></app-image>
