--- a/src/pages/my/contact-us/contact-scroll/contact-scroll.component.html
+++ b/src/pages/my/contact-us/contact-scroll/contact-scroll.component.html
@@ -4,11 +4,11 @@
  * @Author: Wayne Yu
  * @Date: 2021-11-04 16:02:21
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2022-01-06 15:56:56
+ * @LastEditTime: 2022-01-07 11:39:11
 -->
 <div [style.height]="listHeight + 'px'" #scrollBar>
   <app-image [imgData]="title"></app-image>
-  <app-scroll-list-button [imgData]="backBtn" (itemClick)="gotoBack()"></app-scroll-list-button>
+  <app-image-button [imgData]="backBtn" (itemClick)="gotoBack()"></app-image-button>
   <form>
     <div [ngStyle]="styles.leftText">
       <app-popup-text-field [textData]="emailText" [text]="'Email'"></app-popup-text-field>
@@ -20,11 +20,11 @@
       <div><app-popup-text-field [textData]="issueText" [text]="'Issue description'"></app-popup-text-field></div>
       <app-popup-text-field [textData]="otherText" [text]="'Others:'"></app-popup-text-field>
       <div *ngFor="let item of radioBtn; let i = index;" [style.top]="(i+1)*80+'px'">
-        <app-scroll-list-button [imgData]="item" (itemClick)="radioClick(i)"></app-scroll-list-button>
+        <app-image-button [imgData]="item" (itemClick)="radioClick(i)"></app-image-button>
         <app-popup-text-field [textData]="issueItemText" [text]="issueList[i]"></app-popup-text-field>
       </div>
       <app-scroll-text-area [imgData]="textAreaBg" [inputRect]="areaRect"  [fontSize]="35" [defautText]="'Text input'" [text]="issueStr" (textChange)="mainTextChange($event)"></app-scroll-text-area>
-      <app-scroll-list-button [imgData]="submitBtn" (itemClick)="submit()"></app-scroll-list-button>
+      <app-image-button [imgData]="submitBtn" (itemClick)="submit()"></app-image-button>
     </div>
   </form>
 </div>
