--- a/src/pages/order-for-goods/order-item/order-item.component.html
+++ b/src/pages/order-for-goods/order-item/order-item.component.html
@@ -6,7 +6,7 @@
  * @LastEditors: Wayne Yu
  * @LastEditTime: 2022-01-05 13:22:34
 -->
-<div [style.top]="index * 201 + 10 + 'px'" (click)="onItemClick(event)">
+<div [style.top]="index * 201 + 10 + 'px'" (click)="onItemClick($event)">
   <app-image [imgData]="itemBg"></app-image>
   <img [src]="itemData.img" class="productImg"/>
 </div>
