--- a/src/pages/lobby/product-scroll-list/product-scroll-list.component.html
+++ b/src/pages/lobby/product-scroll-list/product-scroll-list.component.html
@@ -4,8 +4,8 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-07 10:44:16
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2022-01-05 16:02:41
+ * @LastEditTime: 2022-01-07 13:39:19
 -->
 <div class="scrollBar widthApp" [style.height]="listHeight + 'px'" #scrollBar>
-  <app-product-item *ngFor="let item of listData; let i = index" [itemData]="item" [textureData]="textureData" [index]="i" (itemClick)="onItemClick($event)"></app-product-item>
+  <app-product-item *ngFor="let item of listData; let i = index" [itemData]="item" [textureData]="textureData" [index]="i" (itemClick)="onListItemClick($event)"></app-product-item>
 </div>
