--- a/src/pages/my/user-center/user-center-scroll-list/user-center-scroll-list.component.html
+++ b/src/pages/my/user-center/user-center-scroll-list/user-center-scroll-list.component.html
@@ -4,8 +4,8 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-14 11:49:12
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2022-01-05 16:04:47
+ * @LastEditTime: 2022-01-07 13:39:08
 -->
 <div class="scrollBar" [style.height]="listHeight + 'px'" #scrollBar>
-  <app-user-center-item *ngFor="let item of listData; let i = index" [itemData]="item" [textureData]="textureData" [index]="i" (itemClick)="onItemClick($event)"></app-user-center-item>
+  <app-user-center-item *ngFor="let item of listData; let i = index" [itemData]="item" [textureData]="textureData" [index]="i" (itemClick)="onListItemClick($event)"></app-user-center-item>
 </div>
