--- a/src/pages/shop/bank-scroll-list/bank-scroll-list.component.html
+++ b/src/pages/shop/bank-scroll-list/bank-scroll-list.component.html
@@ -4,8 +4,8 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-07 09:59:49
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2022-01-05 16:04:08
+ * @LastEditTime: 2022-01-07 13:39:31
 -->
 <div class="scrollBar" [style.height]="listHeight + 'px'" #scrollBar>
-  <app-bank-item *ngFor="let item of listData; let i = index" [itemData]="item" [textureData]="textureData" [index]="i" (itemClick)="onItemClick($event)"></app-bank-item>
+  <app-bank-item *ngFor="let item of listData; let i = index" [itemData]="item" [textureData]="textureData" [index]="i" (itemClick)="onListItemClick($event)"></app-bank-item>
 </div>
