--- a/src/pages/my/contact-us/contact-scroll/contact-scroll.component.html
+++ b/src/pages/my/contact-us/contact-scroll/contact-scroll.component.html
@@ -4,7 +4,7 @@
  * @Author: Wayne Yu
  * @Date: 2021-11-04 16:02:21
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2022-01-07 11:39:11
+ * @LastEditTime: 2022-01-07 14:47:24
 -->
 <div [style.height]="listHeight + 'px'" #scrollBar>
   <app-image [imgData]="title"></app-image>
@@ -13,8 +13,8 @@
     <div [ngStyle]="styles.leftText">
       <app-popup-text-field [textData]="emailText" [text]="'Email'"></app-popup-text-field>
       <app-popup-text-field [textData]="nameText" [text]="'Name'"></app-popup-text-field>
-      <app-scroll-text-input [imgData]="inputBg1" [inputRect]="inputRect" [fontSize]="35" [defautText]="'email'" [text]="emailAddress" (textChange)="emailChange($event)"></app-scroll-text-input>
-      <app-scroll-text-input [imgData]="inputBg2" [inputRect]="inputRect" [fontSize]="35" [defautText]="'name'" [text]="userName" (textChange)="nameChange($event)"></app-scroll-text-input>
+      <app-text-input [imgData]="inputBg1" [inputRect]="inputRect" [fontSize]="35" [defautText]="'email'" [text]="emailAddress" (textChange)="emailChange($event)"></app-text-input>
+      <app-text-input [imgData]="inputBg2" [inputRect]="inputRect" [fontSize]="35" [defautText]="'name'" [text]="userName" (textChange)="nameChange($event)"></app-text-input>
     </div>
     <div class="choise">
       <div><app-popup-text-field [textData]="issueText" [text]="'Issue description'"></app-popup-text-field></div>
@@ -23,7 +23,7 @@
         <app-image-button [imgData]="item" (itemClick)="radioClick(i)"></app-image-button>
         <app-popup-text-field [textData]="issueItemText" [text]="issueList[i]"></app-popup-text-field>
       </div>
-      <app-scroll-text-area [imgData]="textAreaBg" [inputRect]="areaRect"  [fontSize]="35" [defautText]="'Text input'" [text]="issueStr" (textChange)="mainTextChange($event)"></app-scroll-text-area>
+      <app-text-area [imgData]="textAreaBg" [inputRect]="areaRect"  [fontSize]="35" [defautText]="'Text input'" [text]="issueStr" (textChange)="mainTextChange($event)"></app-text-area>
       <app-image-button [imgData]="submitBtn" (itemClick)="submit()"></app-image-button>
     </div>
   </form>
