--- a/src/service/ui/list-text-field/list-text-field.component.html
+++ b/src/service/ui/list-text-field/list-text-field.component.html
@@ -4,8 +4,8 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-09 13:50:29
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-12-30 13:19:52
+ * @LastEditTime: 2022-01-07 14:59:18
 -->
-<div class="textField noneSelect" [ngStyle]="divStyle">
+<div class="textField" [ngStyle]="divStyle">
   <span class="sp" [style]="spanStyle" #sp>{{text}}</span>
 </div>
