--- a/src/popups/result/result-win/result-win.component.html
+++ b/src/popups/result/result-win/result-win.component.html
@@ -4,14 +4,14 @@
  * @Author: Wayne Yu
  * @Date: 2021-10-27 10:21:17
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-12-31 16:07:55
+ * @LastEditTime: 2022-01-07 16:21:57
 -->
 <div [ngStyle]="styles.popupOffset">
   <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
   <app-image [imgData]="popupBg"></app-image>
   <app-image-button [imgData]="closeBtn" (itemClick)="gotoPrize()"></app-image-button>
   <app-image-button [imgData]="okBtn" (itemClick)="retry()"></app-image-button>
-  <img class="lightTextShadow" [src]="productImg" [ngStyle]="styles.productStyle"/>
+  <img [src]="productImg" [ngStyle]="styles.productStyle"/>
   <app-image [imgData]="photoFrame"></app-image>
   <div class="noneSelect">
     <app-image [imgData]="coinIcon"></app-image>
