--- a/src/service/ui/popup-text-field/popup-text-field.component.html
+++ b/src/service/ui/popup-text-field/popup-text-field.component.html
@@ -4,8 +4,8 @@
  * @Author: Wayne Yu
  * @Date: 2021-07-19 12:00:32
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2022-01-07 14:59:24
+ * @LastEditTime: 2022-01-07 16:42:03
 -->
-<div class="textField" [ngStyle]="divStyle">
+<div class="textField" [ngStyle]="divStyle" [style]="shadowStyle">
   <span class="sp" [style]="spanStyle" [ngStyle]="strokeStyle" #sp>{{text}}</span>
 </div>
