--- a/src/pages/my/user-center/user-center-item/user-center-item.component.html
+++ b/src/pages/my/user-center/user-center-item/user-center-item.component.html
@@ -4,14 +4,12 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-14 11:43:09
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2022-01-07 14:07:55
+ * @LastEditTime: 2022-01-07 16:57:21
 -->
 <div [style.top]="index * 146 + 10 + 'px'" (click)="onItemClick($event)">
   <app-image [imgData]="itemBg"></app-image>
   <app-image [imgData]="arrow"></app-image>
   <app-image [imgData]="mainIcon"></app-image>
-  <div class="lightTextShadow">
-    <app-popup-text-field [textData]="tipText" [text]="tipString"></app-popup-text-field>
-  </div>
+  <app-popup-text-field [textData]="tipText" [text]="tipString" [shadowObj]="styles.lightTextShadow"></app-popup-text-field>
   <a href="{{linkString}}" *ngIf="outLink" target="{{linkTarget}}"><div class="outLick"></div></a>
 </div>
