--- a/src/pages/video/control-bar/play-button/play-button.component.html
+++ b/src/pages/video/control-bar/play-button/play-button.component.html
@@ -4,13 +4,13 @@
  * @Author: Wayne Yu
  * @Date: 2021-10-25 11:43:00
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2022-01-06 15:11:53
+ * @LastEditTime: 2022-01-07 17:03:31
 -->
 <div class="imgBtn" [attr.style]="imgStyle" (click)="onButtonClick($event)" (mousedown)="onDown($event)" (touchstart)="onDown($event)"
  (mouseup)="onUp($event)" (mouseout)="onUp($event)" (touchend)="onUp($event)" (touchcancel)="onUp($event)">
   <div [ngStyle]="innerContainer" #carousel>
     <div class="noneSelect" [attr.style]="iconStyle"></div>
-    <div class="lightTextShadow"><app-popup-text-field [textData]="playText" [text]="playString"></app-popup-text-field></div>
+    <app-popup-text-field [textData]="playText" [text]="playString" [shadowObj]="lightTextShadow"></app-popup-text-field>
     <div *ngIf="price">
       <div [ngStyle]="shadowBg"></div>
       <app-popup-text-field [textData]="priceText" [text]="price+''"></app-popup-text-field>
