--- a/src/pages/my/ledger/ledger.component.html
+++ b/src/pages/my/ledger/ledger.component.html
@@ -12,11 +12,15 @@
   <div *ngIf="showCoinList">
     <app-image [imgData]="coinIcon"></app-image>
     <app-image-button [imgData]="ticketBtn" (itemClick)="switchList(2)"></app-image-button>
-    <app-ledger-list [listHeight]="pageHeight - 395" [listData]="coinsChangeList" [textureData]="textureData"></app-ledger-list>
+    <div [ngStyle]="styles.scrollBar" [style.height]="pageHeight - 395 + 'px'">
+      <app-ledger-item *ngFor="let item of coinsChangeList; let i = index" [itemData]="item" [textureData]="textureData" [index]="i"></app-ledger-item>
+    </div>
   </div>
   <div *ngIf="!showCoinList">
     <app-image-button [imgData]="coinBtn" (itemClick)="switchList(1)"></app-image-button>
     <app-image [imgData]="ticketIcon"></app-image>
-    <app-ledger-list [listHeight]="pageHeight - 395" [listData]="ticketChangeList" [textureData]="textureData"></app-ledger-list>
+    <div [ngStyle]="styles.scrollBar" [style.height]="pageHeight - 395 + 'px'">
+      <app-ledger-item *ngFor="let item of ticketChangeList; let i = index" [itemData]="item" [textureData]="textureData" [index]="i"></app-ledger-item>
+    </div>
   </div>
 </div>
