--- a/src/pages/my/address/address.component.html
+++ b/src/pages/my/address/address.component.html
@@ -4,11 +4,13 @@
  * @Author: Wayne Yu
  * @Date: 2021-11-01 17:32:02
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-12-31 13:53:05
+ * @LastEditTime: 2022-01-10 11:01:23
 -->
 <div class="widthApp" [style.height]="pageHeight + 'px'" [ngStyle]="styles.stretchingBg">
   <app-image-button [imgData]="backBtn" (itemClick)="gotoBack()"></app-image-button>
-  <div class="addressListContainer" [style.height]="pageHeight - 250 + 'px'" [ngStyle]="styles.addressList">
-    <app-address-list [listHeight]="pageHeight - 270" [listData]="userAddressList" [textureData]="textureData"></app-address-list>
+  <div [style.height]="pageHeight - 250 + 'px'" [ngStyle]="styles.addressList">
+    <div [ngStyle]="styles.scrollBar" [style.height]="pageHeight - 270 + 'px'">
+      <app-address-item *ngFor="let item of userAddressList; let i = index" [itemData]="item" [textureData]="textureData" [index]="i"></app-address-item>
+    </div>
   </div>
 </div>
