--- a/src/pages/order-for-goods/order-for-goods.component.html
+++ b/src/pages/order-for-goods/order-for-goods.component.html
@@ -4,14 +4,16 @@
  * @Author: Wayne Yu
  * @Date: 2021-11-09 11:41:22
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-12-31 15:26:44
+ * @LastEditTime: 2022-01-10 11:16:57
 -->
 <div class="widthApp" [style.height]="pageHeight + 'px'" [ngStyle]="styles.stretchingBg">
   <app-image [imgData]="title"></app-image>
   <app-image-button [imgData]="backBtn" (itemClick)="gotoBack()"></app-image-button>
   <div class="orderListContainer" [style.height]="pageHeight - 220 + 'px'" [ngStyle]="styles.orderListContainer"></div>
   <div *ngIf="showOnprogress">
-    <app-order-list [listHeight]="pageHeight - 350" [listData]="orderProgressList" [textureData]="textureData"></app-order-list>
+    <div [ngStyle]="styles.scrollBar" [style.height]="pageHeight - 350 + 'px'">
+      <app-order-item *ngFor="let item of orderProgressList; let i = index" [itemData]="item" [textureData]="textureData" [index]="i"></app-order-item>
+    </div>
     <div *ngIf="!orderProgressList.length">
       <div class="noOrder">No New Order Here</div>
       <app-image [imgData]="shocked"></app-image>
@@ -20,7 +22,9 @@
     <app-image-button [imgData]="compBtn" (itemClick)="changeList()"></app-image-button>
   </div>
   <div *ngIf="!showOnprogress">
-    <app-order-list [listHeight]="pageHeight - 350" [listData]="orderCompleteList" [textureData]="textureData"></app-order-list>
+    <div [ngStyle]="styles.scrollBar" [style.height]="pageHeight - 350 + 'px'">
+      <app-order-item *ngFor="let item of orderCompleteList; let i = index" [itemData]="item" [textureData]="textureData" [index]="i"></app-order-item>
+    </div>
     <div *ngIf="!orderCompleteList.length">
       <div class="noOrder">No New Order Here</div>
       <app-image [imgData]="shocked"></app-image>
