--- a/src/pages/shop/shop/shop.component.html
+++ b/src/pages/shop/shop/shop.component.html
@@ -4,7 +4,7 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-01 17:54:02
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2022-01-10 10:24:13
+ * @LastEditTime: 2022-01-10 11:54:25
 -->
 <div class="widthApp" [style.height]="pageHeight + 'px'" [ngStyle]="styles.stretchingBg">
     <div class="listBg widthApp" [style.height]="pageHeight - 270 + 'px'" [style.background-image]="'url(assets/bank/coins.png)'"></div>
@@ -29,6 +29,8 @@
         <app-image-button [imgData]="coinBtn" (itemClick)="switchShop(1)"></app-image-button>
         <app-image-button [imgData]="vipBtn" (itemClick)="switchShop(2)"></app-image-button>
         <app-image [imgData]="ticketIcon"></app-image>
-        <app-ticket-scroll-list [listHeight]="pageHeight - 330" [listData]="ticketItemDatas | slice : 0 : pageSize" [textureData]="textureData"></app-ticket-scroll-list>
+        <div [ngStyle]="styles.ticketScroll" [style.height]="pageHeight - 330 + 'px'">
+            <app-ticket-item *ngFor="let item of ticketItemDatas | slice : 0 : pageSize; let i = index" [itemData]="item" [textureData]="textureData" [index]="i"></app-ticket-item>
+        </div>
     </div>
 </div>
